# UnitBox

./: CMakeLists.txt  README.md
include/: boundingbox_map.h  component.h  confidence_map.h  neural_network.h  unitbox.h
model/: README.md  unitbox_deploy.prototxt  unitbox_solver.prototxt  unitbox_train_val.prototxt
samples/: CMakeLists.txt  detect.cpp  main.cpp
scripts/: README.md  create_dataset.py
src/: boundingbox_map.cpp  component.cpp  confidence_map.cpp  neural_network.cpp  unitbox.cpp
